--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <iframe
-    src="http://3.138.189.136:3000/public/dashboard/26d68903-3c83-4a54-bf83-28d0017b627d"
+    src="https://3.138.189.136:3000/public/dashboard/26d68903-3c83-4a54-bf83-28d0017b627d"
     allowfullscreen>
   </iframe>
 </body>
